# autogen-workflow

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/utils/: model_loader.py
src/workflows/: run_workflow.py
